force-app/main/default/objects/Parameter__c/Parameter__c.object-meta.xml
<CustomObject>
    <label>Parameter</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>