force-app/main/default/objects/Parameter__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <referenceTo>API__c</referenceTo>
    <relationshipName>API_Headers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>