force-app/main/default/objects/Parameter__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Content-Type</fullName>
            </value>
            <value>
                <fullName>User-Agent</fullName>
            </value>
            <value>
                <fullName>Accept-Encoding</fullName>
            </value>
            <value>
                <fullName>Accept-Language</fullName>
            </value>
            <value>
                <fullName>Cache-Control</fullName>
            </value>
            <value>
                <fullName>If-Modified-Since</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>