force-app/main/default/objects/Parameter__c/fields/Key_Custom__c.field-meta.xml
<CustomField>
    <fullName>Key_Custom__c</fullName>
    <label>Key Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>