force-app/main/default/objects/Parameter__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Endpoint</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>