force-app/main/default/objects/Parameter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>application/json;charset=UTF-8</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
            <value>
                <fullName>no-cache</fullName>
            </value>
            <value>
                <fullName>no-store</fullName>
            </value>
            <value>
                <fullName>gzip</fullName>
            </value>
            <value>
                <fullName>deflate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>