force-app/main/default/objects/Parameter__c/fields/Value_Custom__c.field-meta.xml
<CustomField>
    <fullName>Value_Custom__c</fullName>
    <label>Value Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>