force-app/main/default/objects/Parameter__c/fields/Value_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Value_Encrypted__c</fullName>
    <label>Value Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>